--- a/less/boon-card.less
+++ b/less/boon-card.less
@@ -1,19 +1,19 @@
-.atout-card {
+.boon-card {
     display: flex;
     flex-flow: column;
     height: 150px;
     font-size: 12px;
-    .atout-header {
+    .boon-header {
         height: 20px;
     }
-    .atout-name-line {
+    .boon-name-line {
         display: flex;
         flex-flow: row wrap;
         height: 20px;
         .input {
             flex-basis: 10%
         }
-        .atout-name {
+        .boon-name {
             flex-basis: 90%
         }
     }
