--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -1,15 +1,18 @@
 @import "./config.less";
-@import "./actor-sheet.less";
-@import "./atout-card.less";
+@import "./player-sheet.less";
+@import "./npc-sheet.less";
+@import "./boon-card.less";
 @import "./item-sheet.less";
-@import "./tab/player-atouts.less";
+@import "./boon-sheet.less";
+@import "./weapon-sheet.less";
+@import "./tab/player-boons.less";
 @import "./tab/player-bio.less";
 @import "./tab/player-combat.less";
 @import "./tab/player-notes.less";
 @import "./tab/player-equipment.less";
 
-@import "./actor-sheet-style.less";
-@import "./tab/player-atouts-style.less";
+@import "./player-sheet-style.less";
+@import "./tab/player-boons-style.less";
 @import "./tab/player-bio-style.less";
 @import "./tab/player-combat-style.less";
 @import "./tab/player-notes-style.less";
