--- a/less/config.less
+++ b/less/config.less
@@ -24,6 +24,10 @@
 @title-color: #693d25;
 @font-soft-color: #8e8d8d;
 @core-main-color: #456;
-@atout-color: #51602f;
+@boon-color: #51602f;
 @icon-color: rgb(112, 90, 16);
 @clear-background: #fffdfc;
+
+
+//size
+@editor-height: 5em;
