--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -1,8 +1,8 @@
-.cleenmain.sheet.pj {
+.cleenmain.sheet.player {
     .window-content {
         background: no-repeat url('./assets/image/paxelfica-fondfdp.webp');
         background-color: @clear-background;
-      }
+    }
     textarea {
         resize: none;
     }
@@ -87,7 +87,7 @@
                         flex-flow: row nowrap;
                         margin: 0.5em;
                         white-space: nowrap;
-                        .input-heroisme{
+                        .input-heroism{
                             display: flex;
                             flex-direction: row;
                             input{
@@ -100,14 +100,14 @@
                         .central-text{
                             margin: 0.3em .2em 0 .1em;
                         }
-                        .name-text, .blessure-text, .heroisme-text, .vitalite-text{
+                        .name-text, .blessure-text, .heroism-text, .health-text{
                             margin: 0.3em .3em 0 .3em;
                         }
-                        .vitalite-block{
+                        .health-block{
                             display: flex;
                             flex-direction: row;
                             justify-content: flex-start;
-                            .vitalite-input{
+                            .health-input{
                                 width: 2em;
                             }
                         }
