--- a/less/tab/player-combat.less
+++ b/less/tab/player-combat.less
@@ -1,4 +1,4 @@
-.cleenmain.sheet.pj {
+.cleenmain.sheet.player {
     .main{
         .central{
             .combat-tab{
@@ -16,15 +16,15 @@
                 .combat-domain-label{
                     margin: 1em 0 0 0;
                 }
-                .formations-list{
+                .trainings-list{
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
-                    .formations-group{
+                    .trainings-group{
                         display: flex;
                         flex-direction: row;
                         flex-grow: 1;
-                        .formation-name{
+                        .trainings-name{
                             margin: 0 1em 0 0;
                         }
                     }
