--- a/templates/sheets/boon-sheet.html
+++ b/templates/sheets/boon-sheet.html
@@ -3,12 +3,14 @@
         <h1><input name="name" type="text" value="{{item.name}}"/></h1>
     </header>
     <div class="sheet-content">
-        <div class="atout-name-line">
+        <div class="boon-line">
             {{#if data.developed}}
             <input name="data.developed" value="{{data.developed}}" type="checkbox" value="1" checked/>
             {{else}}
             <input name="data.developed" value="{{data.developed}}" type="checkbox" value="0"/>
             {{/if}}
+            {{localize cleenmain.boon.developedinfo}}
+        </div>
         {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
 </form>
