--- a/templates/sheets/player-sheet.html
+++ b/templates/sheets/player-sheet.html
@@ -48,7 +48,7 @@
                         <div class="name-text">{{localize "cleenmain.label.character"}} :</div>
                         <input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
                         <div class="right-icon">
-                            <a class="sheet-unlock" data-type="formations" title="{{localize "cleenmain.label.unlock_sheet"}}">
+                            <a class="sheet-unlock" title="{{localize "cleenmain.label.unlock_sheet"}}">
                                 {{#if unlocked}}
                                 <i class="fas fa-lock-open"></i>
                                 {{else}}
@@ -58,22 +58,22 @@
                         </div>
                     </div>
                     <div class="central-line">
-                        <div class="name-text">{{localize "cleenmain.label.occupation"}} :</div>
-                        <input id="occupation" name="data.bio.occupation" type="text" value="{{data.bio.occupation}}" />
+                        <div class="name-text">{{localize "cleenmain.label.activity"}} :</div>
+                        <input id="activity" name="data.bio.activity" type="text" value="{{data.bio.activity}}" />
                     </div>
                     <div class="central-line space-between">
-                        <div class="vitalite-block">
-                            <div class="vitalite-text">{{localize "cleenmain.label.vitalite"}} :</div>
-                                <input class="vitalite-input" title="{{localize "cleenmain.vitalite.current"}}" id="vitalite" name="data.vitalite.value" type="number" value="{{data.vitalite.value}}"/>
+                        <div class="health-block">
+                            <div class="health-text">{{localize "cleenmain.label.health"}} :</div>
+                                <input class="health-input" title="{{localize "cleenmain.health.current"}}" id="health" name="data.health.value" type="number" value="{{data.health.value}}"/>
                                 <div class="central-text">/</div>
                                 {{#if unlocked}}
-                                    <input title="{{localize "cleenmain.vitalite.max"}}" id="vitalitemax" name="data.vitalite.max" type="number" value="{{data.vitalite.max}}"/>
+                                    <input title="{{localize "cleenmain.health.max"}}" id="health" name="data.health.max" type="number" value="{{data.health.max}}"/>
                                 {{else}}
-                                <div class="central-text">{{data.vitalite.max}}</div>
+                                <div class="central-text">{{data.health.max}}</div>
                                 {{/if}}
                         </div>
                             <div class="blessure-block">
-                                <div class="blessure-text">{{localize "cleenmain.label.blessures"}} :</div>
+                                <div class="blessure-text">{{localize "cleenmain.label.wounds"}} :</div>
                                 <select id="blessure" name="data.blessure">
                                     {{#select data.blessure}}
                                     <option value="0">0</option>
@@ -86,14 +86,14 @@
                             </div>
                     </div>
                     <div class="central-line">
-                            <div class="heroisme-text">{{localize "cleenmain.label.heroisme"}}:</div>
-                            <div class="input-heroisme">
-                                <input title="{{localize "cleenmain.heroisme.current"}}" id="heroisme" name="data.heroisme.value" type="number" value="{{data.heroisme.value}}"/>
+                            <div class="heroism-text">{{localize "cleenmain.label.heroism"}}:</div>
+                            <div class="input-heroism">
+                                <input title="{{localize "cleenmain.heroism.current"}}" id="heroism" name="data.heroism.value" type="number" value="{{data.heroism.value}}"/>
                                 <div class="central-text">/</div>
                                 {{#if unlocked}}
-                                <input title="{{localize "cleenmain.heroisme.max"}}" id="heroismemax" name="data.heroisme.max" type="number" value="{{data.heroisme.max}}"/>
+                                <input title="{{localize "cleenmain.heroism.max"}}" id="heroismmax" name="data.heroism.max" type="number" value="{{data.heroism.max}}"/>
                                 {{else}}
-                                <div class="central-text">{{data.heroisme.max}}</div>
+                                <div class="central-text">{{data.heroism.max}}</div>
                                 {{/if}}
                         </div>
                     </div>
@@ -102,7 +102,7 @@
 
             <div class="sheet-tabs tabs" data-group="primary">
                 <b class="actor" data-tab="combat">{{localize "cleenmain.sheet.tab.combat"}}</b>
-                <b class="actor" data-tab="atouts">{{localize "cleenmain.sheet.tab.atouts"}}</b>
+                <b class="actor" data-tab="boons">{{localize "cleenmain.sheet.tab.boons"}}</b>
                 <b class="actor" data-tab="equipment">{{localize "cleenmain.sheet.tab.equipment"}}</b>
                 <b class="actor" data-tab="bio">{{localize "cleenmain.sheet.tab.bio"}}</b>
                 <b class="actor" data-tab="notes">{{localize "cleenmain.sheet.tab.notes"}}</b>
@@ -110,7 +110,7 @@
     
             <div class="sheet-body">
                 <div class="tab" data-group="primary" data-tab="combat">{{> systems/cleenmain/templates/sheets/tab/player-combat.html}}</div>
-                <div class="tab" data-group="primary" data-tab="atouts">{{> systems/cleenmain/templates/sheets/tab/player-atouts.html}}</div>
+                <div class="tab" data-group="primary" data-tab="boons">{{> systems/cleenmain/templates/sheets/tab/player-boons.html}}</div>
                 <div class="tab" data-group="primary" data-tab="equipment">{{> systems/cleenmain/templates/sheets/tab/player-equipment.html}}</div>
                 <div class="tab" data-group="primary" data-tab="bio">{{> systems/cleenmain/templates/sheets/tab/player-bio.html}}</div>
                 <div class="tab" data-group="primary" data-tab="notes">{{> systems/cleenmain/templates/sheets/tab/player-notes.html}}</div>
